Correction workflow CI

--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -23,4 +23,6 @@ jobs:
           java-version: '21'
 
       - name: Build Maven
+        working-directory: person-api
         run: mvn clean package -DskipTests
+
