--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -24,5 +24,4 @@ jobs:
 
       - name: Build Maven
         working-directory: person-api
-        run: mvn clean package -DskipTests
-
+        run: mvn clean verify
