--- a/person-api/pom.xml
+++ b/person-api/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>4.0.2</version>
+        <version>3.3.2</version>
         <relativePath/>
     </parent>
 
@@ -29,7 +29,7 @@
     <!-- DEPENDANCES -->
     <dependencies>
 
-        <!-- SPRING WEB (API REST) -->
+        <!-- SPRING WEB -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -48,6 +48,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- H2 POUR LES TESTS -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- LOMBOK -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -55,7 +62,7 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- TESTS SPRING BOOT (JUnit + Mockito + MockMvc) -->
+        <!-- TESTS -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -75,12 +82,6 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </path>
-                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
 
